<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Navigation.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_test_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/reg_title_hint"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/ic_email_icon"
            android:layout_width="match_parent"
            android:hint="@string/reg_email_hint"
            android:gravity="center"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/ic_user_account"
            android:layout_width="match_parent"
            android:hint="@string/reg_username_hint"
            android:gravity="center"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/ic_password_icon"
            android:layout_width="match_parent"
            android:hint="@string/reg_password_hint"
            android:gravity="center"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/ic_password_icon"
            android:layout_width="match_parent"
            android:hint="@string/reg_onemore_pass_hint"
            android:gravity="center"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regPasswordConfirmEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_margin="10dp"
            android:text="@string/login_no_account_gotoreg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login_continue_with_hint"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:layout_margin="1dp"

                android:layout_weight="1"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/reg_have_acc_hint" />

            <TextView
                android:id="@+id/signInTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/login_button_hint"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>