<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Navigation.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_test_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_title_hint"
            android:textSize="20sp"

            android:layout_margin="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/ic_user_account"
            android:layout_width="match_parent"
            android:hint="@string/login_username_hint"
            android:gravity="center"

            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="keyl"
                android:inputType="textPersonName|textCapSentences"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/ic_password_icon"
            android:layout_width="match_parent"
            android:hint="@string/login_password_hint"
            android:layout_marginTop="5dp"
            android:gravity="center"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="keyl"
            android:textColor="@color/black"
            android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/rememberCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:text="@string/login_remember_hint" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_button_hint" />

<!--        <TextView-->
<!--            android:id="@+id/forgotPasswordTV"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/forgot_password"-->
<!--            android:layout_gravity="center"-->
<!--            android:gravity="center"-->
<!--            android:fontFamily="sans-serif-medium"-->
<!--            />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:background="@android:color/darker_gray"
                android:layout_margin="1dp"/>
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_continue_with_hint"
                android:textSize="14sp"
                android:layout_weight="1"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"

                android:background="@android:color/darker_gray"
                android:layout_margin="1dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="7dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/login_no_account"
                android:gravity="right"
                />

            <TextView
                android:id="@+id/signUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_no_account_gotoreg"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:foreground="?attr/selectableItemBackground"
                android:id="@+id/googleLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_google_login" />

            <androidx.appcompat.widget.AppCompatImageView
                android:foreground="?attr/selectableItemBackground"
                android:id="@+id/vkLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_vk_logo" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>